@@ -10,9 +10,11 @@ dnl ***************************
 dnl *** Version information ***
 dnl ***************************
 m4_define([libxfce4menu_verinfo], [0:0:0])
-m4_define([libxfce4menu_version_major], [0])
-m4_define([libxfce4menu_version_minor], [1])
-m4_define([libxfce4menu_version_micro], [0])
+m4_define([libxfce4menu_version_api_major], [0])
+m4_define([libxfce4menu_version_api_minor], [1])
+m4_define([libxfce4menu_version_major], [4])
+m4_define([libxfce4menu_version_minor], [5])
+m4_define([libxfce4menu_version_micro], [80])
 m4_define([libxfce4menu_version_nano], [])
 m4_define([libxfce4menu_version_build], [r@REVISION@])
 m4_define([libxfce4menu_version_tag], [svn])
@@ -54,10 +56,14 @@ dnl ****************************
 LIBXFCE4MENU_VERSION_MAJOR=libxfce4menu_version_major()
 LIBXFCE4MENU_VERSION_MINOR=libxfce4menu_version_minor()
 LIBXFCE4MENU_VERSION_MICRO=libxfce4menu_version_micro()
-LIBXFCE4MENU_VERSION_API=$LIBXFCE4MENU_VERSION_MAJOR.$LIBXFCE4MENU_VERSION_MINOR
+LIBXFCE4MENU_VERSION_API_MAJOR=libxfce4menu_version_api_major()
+LIBXFCE4MENU_VERSION_API_MINOR=libxfce4menu_version_api_minor()
+LIBXFCE4MENU_VERSION_API=$LIBXFCE4MENU_VERSION_API_MAJOR.$LIBXFCE4MENU_VERSION_API_MINOR
 AC_SUBST([LIBXFCE4MENU_VERSION_MAJOR])
 AC_SUBST([LIBXFCE4MENU_VERSION_MINOR])
 AC_SUBST([LIBXFCE4MENU_VERSION_MICRO])
+AC_SUBST([LIBXFCE4MENU_VERSION_API_MAJOR])
+AC_SUBST([LIBXFCE4MENU_VERSION_API_MINOR])
 AC_SUBST([LIBXFCE4MENU_VERSION_API])
 
 dnl *******************************
